<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">
    <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHeight_percent="0.5"
            android:background="@android:color/white"
            android:id="@+id/frameLayout"/>
    <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.5"
            android:background="@color/colorPrimary"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline2" app:layout_constraintGuide_percent="0.2"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline3"
            app:layout_constraintGuide_percent="0.8"/>
    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="@+id/guideline2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3" app:cardBackgroundColor="@android:color/white"
            app:cardElevation="8dp" app:cardCornerRadius="6dp" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo_dw"
                    android:contentDescription="@string/content_description_logo"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/imageView" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
                    app:layout_constraintVertical_bias="0.36"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline4" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp" android:id="@+id/textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/UsernameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username_or_email"
                        android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline4"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                    android:id="@+id/textInputLayout2">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/PasswordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>
            <androidx.constraintlayout.widget.Guideline
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guideline4" app:layout_constraintGuide_percent="0.5"/>
            <Button
                    android:text="@string/login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonLogin"
                    android:padding="12dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                    app:layout_constraintVertical_bias="0.7"
                    android:textColor="@android:color/white"
                    android:background="@drawable/background_login_button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>