<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.dwtraining.viewmodels.MovieDetailViewModel" />

        <variable
            name="movie"
            type="LiveData&lt;com.dwtraining.models.Movie>" />

        <import type="androidx.lifecycle.LiveData" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginBottom="32dp"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:fitsSystemWindows="true"
                    android:imageURL="@{movie.preview_image_path}"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/animToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical"
            android:layout_marginBottom="?android:attr/actionBarSize"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="6dp"
                    app:cardPreventCornerOverlap="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/title_movie_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{movie.title}"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/colorPrimary" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/image_movie_detail"
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:adjustViewBounds="true"
                                android:contentDescription="@null"
                                android:imageURL="@{movie.poster_image_path}"
                                android:src="@mipmap/ic_launcher" />

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/rating"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                    android:textColor="@color/colorAccent" />

                                <TextView
                                    android:id="@+id/rating_movie_detail"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{String.format(@string/rating_detail, movie.rating, movie.vote_count)}"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                    tools:text="5.2 / 10 - 2554 votes" />

                                <RatingBar
                                    android:id="@+id/ratingBar"
                                    style="?android:attr/ratingBarStyleSmall"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:max="10"
                                    android:numStars="10"
                                    android:progress="@{viewmodel.getRating(movie.rating)}" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="16dp"
                                    android:text="@string/release_date"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                    android:textColor="@color/colorAccent" />

                                <TextView
                                    android:id="@+id/date_release_movie_detail"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{movie.release_date}"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                    tools:text="20/12/2015" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="16dp"
                                    android:text="@string/popularity"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                    android:textColor="@color/colorAccent" />

                                <TextView
                                    android:id="@+id/popularity_movie_detail"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{String.valueOf(movie.popularity)}"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                    tools:text="8.5" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/description_movie_detail_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/description_movie_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@{movie.description}"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            tools:text="This is the description" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>